src/test/ui/feature-gates/feature-gate-untagged_unions.stderr
error[E0658]: unions with non-`Copy` fields are unstable
  --> $DIR/feature-gate-untagged_unions.rs:9:1
   |
LL | / union U3 {
LL | |     a: String,
LL | | }
   | |_^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/32836
   = help: add #![feature(untagged_unions)] to the crate attributes to enable

error[E0658]: unions with non-`Copy` fields are unstable
  --> $DIR/feature-gate-untagged_unions.rs:13:1
   |
LL | / union U4<T> {
LL | |     a: T,
LL | | }
   | |_^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/32836
   = help: add #![feature(untagged_unions)] to the crate attributes to enable

error[E0658]: unions with `Drop` implementations are unstable
  --> $DIR/feature-gate-untagged_unions.rs:17:1
   |
LL | / union U5 {
LL | |     a: u8,
LL | | }
   | |_^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/32836
   = help: add #![feature(untagged_unions)] to the crate attributes to enable

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0658`.
